@@ -529,6 +529,50 @@ RQuery::$defaultFilters['address']['reflocation']['operators']['is.only'] = Arra
         'input' => 'input/panorama-8.0.xml'
     )
 );
+RQuery::$defaultFilters['address']['refstore']['operators']['is'] = Array(
+    'Function' => function(AddressRQueryContext $context )
+    {
+        $value = $context->value;
+        $value = strtolower($value);
+
+        $context->object->ReferencesStoreValidation( $value );
+
+        $refstore = $context->object->getReferencesStore();
+
+        if( array_key_exists( $value, $refstore ) )
+            return true;
+
+        return false;
+
+    },
+    'arg' => true,
+    'ci' => Array(
+        'fString' => '(%PROP% rulestore )',
+        'input' => 'input/panorama-8.0.xml'
+    )
+);
+RQuery::$defaultFilters['address']['reftype']['operators']['is'] = Array(
+    'Function' => function(AddressRQueryContext $context )
+    {
+        $value = $context->value;
+        $value = strtolower($value);
+
+        $context->object->ReferencesTypeValidation( $value );
+
+        $reftype = $context->object->getReferencesType();
+
+        if( array_key_exists( $value, $reftype ) )
+            return true;
+
+        return false;
+
+    },
+    'arg' => true,
+    'ci' => Array(
+        'fString' => '(%PROP% securityrule )',
+        'input' => 'input/panorama-8.0.xml'
+    )
+);
 RQuery::$defaultFilters['address']['value']['operators']['string.eq'] = Array(
     'Function' => function(AddressRQueryContext $context )
     {
